spectec/test/elab/neg/parse-syntax-no-ids.spectec
;; `syntax` keyword with no identifiers following it.

syntax
